fix(config manager): using toList instead of long form